force-app/main/default/objects/ssot__SalesOrderProduct__dlm/ssot__SalesOrderProduct__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>A component of a Sales Order that identifies a product or service that will be sold to the customer</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Sales Order</referenceEntityGroup>
        <referenceEntityName>SalesOrderProduct</referenceEntityName>
        <referenceEntitySubjectArea>Sales Order</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>