force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__AllocatedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AllocatedQuantity__c</fullName>
    <label>Allocated Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AllocatedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>