force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__AllocatedQuantityUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AllocatedQuantityUOMId__c</fullName>
    <label>Allocated Quantity Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AllocatedQuantityUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>