force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__AvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvailableQuantity__c</fullName>
    <label>Available Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvailableQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>