force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscountAmount__c</fullName>
    <label>Discount Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscountAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>