force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__GiftOrderMessageText__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftOrderMessageText__c</fullName>
    <label>Gift Order Message</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftOrderMessageText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>