force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__GrossUnitPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__GrossUnitPriceAmount__c</fullName>
    <label>Gross Unit Price Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GrossUnitPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>