force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__IsListedProduct__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsListedProduct__c</fullName>
    <label>Listed Product</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsListedProduct</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>