force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__IsPromotionalProduct__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPromotionalProduct__c</fullName>
    <label>Promotional Product</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPromotionalProduct</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>