force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__ListPriceQuantityUOM__c.field-meta.xml
<CustomField>
    <fullName>ssot__ListPriceQuantityUOM__c</fullName>
    <label>[DoNotUse]ListPriceQuantityUnitofMeasure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ListPriceQuantityUOM</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>