force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__ListPriceTermUOM__c.field-meta.xml
<CustomField>
    <fullName>ssot__ListPriceTermUOM__c</fullName>
    <label>[DoNotUse]List Price Term Unit ofMeasure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ListPriceTermUOM</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>