force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__ListPriceTermUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ListPriceTermUOMId__c</fullName>
    <label>List Price Term Unit of Measure</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ListPriceTermUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>