force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__OrderAdjustmentSubTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderAdjustmentSubTotalAmount__c</fullName>
    <label>Order Adjustment SubTotal Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderAdjustmentSubTotalAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>