force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__OrderProductNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderProductNumber__c</fullName>
    <label>Order Product Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderProductNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>