force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__OriginalOrderProductId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OriginalOrderProductId__c</fullName>
    <label>Original Order Product</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OriginalOrderProductId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>