force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PricebookEntryId__c</fullName>
    <label>Pricebook Entry</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PricebookEntryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>