force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__ProvisioningDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProvisioningDate__c</fullName>
    <label>Provisioning Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProvisioningDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>