force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__QuantityOrderedUOM__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuantityOrderedUOM__c</fullName>
    <label>[DoNotUse]Quantity Ordered UnitOfMeasure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuantityOrderedUOM</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>