force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__rel_1697761199594_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761199594_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOrderProduct_Id_map_SalesOrderP_rel</label>
    <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
    <relationshipLabel>SalesOrderProduct_Id_map_SalesOrderP_rel</relationshipLabel>
    <relationshipName>rel_1697761199594_end</relationshipName>
    <type>Lookup</type>
</CustomField>