force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__RequestedStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestedStartDate__c</fullName>
    <label>Requested Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestedStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>