force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SalesOrderDeliveryGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderDeliveryGroupId__c</fullName>
    <label>Sales Order Delivery Group</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderDeliveryGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>