force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SalesOrderProductNotes__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderProductNotes__c</fullName>
    <label>SalesOrderProductNotes relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderProductNotes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>