force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SalesOrderProductPriceAdjustments__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderProductPriceAdjustments__c</fullName>
    <label>SalesOrderProductPriceAdjustments</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderProductPriceAdjustments</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>