force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SalesOrderProductReasonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderProductReasonId__c</fullName>
    <label>Sales Order Product Reason</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderProductReasonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>