force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SalesOrderProductStatusId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderProductStatusId__c</fullName>
    <label>Sales Order Product Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderProductStatusId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>