force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SalesOrderProductTaxes__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderProductTaxes__c</fullName>
    <label>SalesOrderProductTaxes relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderProductTaxes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>