force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SegmentIndexId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SegmentIndexId__c</fullName>
    <label>Segment Index</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SegmentIndexId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>