force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__ShippingCostAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingCostAmountCurrency__c</fullName>
    <label>Shipping Cost Amount Currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShippingCostAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>