force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__ShippingTaxAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingTaxAmountCurrency__c</fullName>
    <label>Shipping Tax Amount Currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShippingTaxAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>