force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SpecialUnitPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__SpecialUnitPriceAmount__c</fullName>
    <label>Special Unit Price Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SpecialUnitPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>