force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SubscriptionTermQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubscriptionTermQuantity__c</fullName>
    <label>Subscription Term Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriptionTermQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>