force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SubscriptionTermUnit__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubscriptionTermUnit__c</fullName>
    <label>[DoNotUse]Subscription TermUnitofMeasure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriptionTermUnit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>