force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__TotalDistributedAdjustmentTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDistributedAdjustmentTaxAmount__c</fullName>
    <label>Total Distributed Adjustment Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDistributedAdjustmentTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>