force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__TotalLineAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalLineAdjustmentAmount__c</fullName>
    <label>Total Line Adjustment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalLineAdjustmentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>