force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__TotalWithTaxDistAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalWithTaxDistAdjustmentAmount__c</fullName>
    <label>Total With Tax Dist Adjustment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalWithTaxDistAdjustmentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>