force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__UnitPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UnitPriceAmount__c</fullName>
    <label>Unit Price Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UnitPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>