force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__WithTaxAdjustedLineAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WithTaxAdjustedLineAmount__c</fullName>
    <label>With Tax Adjusted Line Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WithTaxAdjustedLineAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>